@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-12-4
+DATE: 05/18/2018
+STAFF: lec
+CHANGES: TR12829/Populate DOI for peer reviewed articles
+add findNLMrefresh.sh script
+
 TAG: littriageload-6-0-12-3
 TAG: littriageload-6-0-12-2
 DATE: 04/03/2018, 05/01/2018
